# vyatta-domain-match

./: AUTHORS  Makefile.am  README  README.md  configure.ac
debian/: README  changelog  control  lintian  rules
scripts/: vyatta-domain-match.pl
scripts/check-params-on-reboot.d/: reset-domain-match
templates-cfg/service/dns/domain-match/: node.def
templates-cfg/service/dns/domain-match/node.tag/domain/: node.def
templates-cfg/service/dns/domain-match/node.tag/group/: node.def
